crates/capsec/tests/compile_fail/main_wrong_type.rs
/// #[capsec::main] first parameter must be CapRoot.
use capsec::prelude::*;

#[capsec::main]
fn main(x: String) {}
